--- a/Data_wrangling_Seance2.ipynb
+++ b/Data_wrangling_Seance2.ipynb
@@ -1744,31 +1744,29 @@
     {
       "cell_type": "code",
       "source": [
-        "df.groupby(by=['Survived','Sex']).Age.mean()"
+        "df.groupby(by=['Survived']).Age.mean()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "OBEnHni41t-Q",
-        "outputId": "39e2cd4e-6dbf-42f7-996c-27655869c297"
+        "outputId": "b003f14d-b7bd-4a9c-c97f-ae5078e78350"
       },
-      "execution_count": 101,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Survived  Sex   \n",
-              "0         female    25.666667\n",
-              "          male      30.783120\n",
-              "1         female    28.532468\n",
-              "          male      27.382294\n",
+              "Survived\n",
+              "0    30.028233\n",
+              "1    28.163735\n",
               "Name: Age, dtype: float64"
             ]
           },
           "metadata": {},
-          "execution_count": 101
+          "execution_count": 102
         }
       ]
     }
